# stm32_bme280_rust

./: Cargo.toml  README.md  memory.x
.cargo/: config.toml
