[package]
name = "stm32_bme280_rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html


[dependencies]
cortex-m = "0.7.4"
cortex-m-rt = "0.7.1"
cortex-m-semihosting = "0.5.0"
panic-rtt-target = {version = "0.1.2", features=["cortex-m"]}
rtt-target = {version = "0.3.1", features=["cortex-m"]}
stm32f4xx-hal = {version="0.13.2", features=["stm32f411", "usb_fs"]}
usb-device = "0.2.8"
usbd-human-interface-device = "0.2.0"
stm32-usbd = "0.6.0"
usbd-serial = "0.1.1"
embedded-time = "0.12.1"
bme280-multibus = "0.2.1"
embedded-hal = "0.2"
bme280 = "0.4.4"
embedded-graphics = "0.7.1"
sh1106 = "0.4.0"
arrform = "0.1.1"
ds18b20 = "0.1.1"
one-wire-bus = "0.1.1"

# ftdi-embedded-hal = { version = "0.11", features = ["libftd2xx"] }
# libftd2xx = "0.32"

[[bin]]
name = "ventilation"
test = false
bench = false

[profile.dev]
opt-level = 1